<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.MainActivity">

    <LinearLayout
            android:id="@+id/layout_cardholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="5dp"
            android:visibility="gone">

        <ImageView
                android:id="@+id/imageview_card"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/this_is_a_magic_card"
                android:src="@drawable/place_holder_card"/>

        <Button
                android:id="@+id/btn_closecardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_close"
                android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/layout_cmcwheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_history">

        <Button
                android:id="@+id/btn_cmc_decrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_decrease_button"/>

        <TextView
                android:id="@+id/text_cmc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_text_value"
                android:textSize="48sp"
                android:textStyle="bold"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"/>

        <Button
                android:id="@+id/btn_cmc_increase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_increase_button"/>

    </LinearLayout>

    <Button
            android:id="@+id/btn_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_cast_creature"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/layout_cmcwheel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button
            android:id="@+id/btn_momirvig"
            android:text="@string/momir_vig_string"
            android:drawableTop="@drawable/ic_momir_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_history"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"/>
    <Button
            android:id="@+id/btn_history"
            android:text="@string/history_string"
            android:drawableTop="@drawable/ic_history_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/btn_momirvig"
            app:layout_constraintEnd_toStartOf="@+id/btn_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"/>
    <Button
            android:id="@+id/btn_settings"
            android:text="@string/settings_string"
            android:drawableTop="@drawable/ic_settings_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/btn_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"/>

</android.support.constraint.ConstraintLayout>